Сетка личного проекта

--- a/catalog.html
+++ b/catalog.html
@@ -8,14 +8,14 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-    <header class="main-header">
-      <div class="container">
+    <div class="container clearfix">
+      <header class="main-header">
         <nav class="main-navigation">
-          <a class="logo" href="index.html"><img src="img/logo.svg" alt="Логотип Glaccy" width="154" height="64"></a>
+          <a class="main-navigation__logo" href="index.html"><img src="img/logo.svg" alt="Логотип Glaccy" width="154" height="64"></a>
           <ul class="main-navigation__list">
             <li><a class="navigation-active" href="#">Каталог</a></li>
             <li><a class="navigation" href="#">Доставка и оплата</a></li>
-            <li><a class="navigation" href="#">О компании</a></li>
+            <li><a class="navigation" href="#">О Компании</a></li>
           </ul>
         </nav>
         <div class="user-block">
@@ -27,9 +27,9 @@
           <span>С 10 до 20, ежедневно</span>
           <span class="phone">8 812 450-25-25</span>
         </div>
-      </div>
-    </header>
-    <main class="container">
+      </header>
+    </div>
+    <main class="container clearfix">
       <nav class="second-navigation">
         <ul class="second-navigation__list">
           <li><a class="second-navigation__item" href="#">Главная</a></li>
@@ -77,8 +77,8 @@
           <button class="btn-apply" type="submit">Применить</button>
         </form>
       </section>
-      <section class="catalog">
-        <div class="row">
+      <section class="catalog clearfix">
+        <div class="row clearfix">
           <article class="item">
             <img src="img/ice-orange.png" alt="Апельсиновое" width="267" height="267">
             <span class="item-price">310 ₽/кг</span>
@@ -104,7 +104,7 @@
             <a class="btn" href="#">Быстрый просмотр</a>
           </article>
         </div>
-        <div class="row">
+        <div class="row clearfix">
           <article class="item">
             <img src="img/ice-cowberry.png" alt="Брусничное" width="267" height="267">
             <span class="item-price">325 ₽/кг</span>
@@ -130,7 +130,7 @@
             <a class="btn" href="#">Быстрый просмотр</a>
           </article>
         </div>
-        <div class="row">
+        <div class="row clearfix">
           <article class="item">
             <img src="img/ice-vanilla.png" alt="Сливочно-ванильное" width="267" height="267">
             <span class="item-price">440₽ ₽/кг</span>
@@ -167,18 +167,18 @@
         <a class="pages-next" href="#"><img src="#" alt="Вперед" width="" height=""></a>
       </section>
     </main>
-    <footer class="footer">
-      <section class="footer__social">
+    <footer class="footer container clearfix">
+      <section class="footer-social">
         <a class="social-btn social-btn-tw" href="#">Твиттер</a>
         <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
         <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
         <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
       </section>
-      <section class="footer__navigation">
-        <a class="footer__navigation__info-dealer" href="#"><img src="#" alt="Сердечко" width="" height="">Для поставщиков</a>
-        <a class="footer__navigation__info" href="#">О производстве</a>
-        <a class="footer__navigation__info" href="#">Наши документы</a>
-        <a class="footer__navigation__info" href="#">Экологические стандарты</a>
+      <section class="footer-navigation">
+        <a class="footer-navigation__info-dealer" href="#"><img src="#" alt="Сердечко" width="" height="">Для поставщиков</a>
+        <a class="footer-navigation__info" href="#">О производстве</a>
+        <a class="footer-navigation__info" href="#">Наши документы</a>
+        <a class="footer-navigation__info" href="#">Экологические стандарты</a>
       </section>
       <section class="footer-copyright">
         <span>Сделано в <a class="copyright" href="https://htmlacademy.ru">HTML Academy</a> © 2016</span>
