Внесение изменений в сетку личного проекта

--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="container clearfix">
-      <header class="main-header">
+      <header class="main-header clearfix">
         <nav class="main-navigation">
           <a class="main-navigation__logo" href="index.html"><img src="img/logo.svg" alt="Логотип Glaccy" width="154" height="64"></a>
           <ul class="main-navigation__list">
@@ -174,11 +174,15 @@
         <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
         <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
       </section>
-      <section class="footer-navigation">
-        <a class="footer-navigation__info-dealer" href="#"><img src="#" alt="Сердечко" width="" height="">Для поставщиков</a>
-        <a class="footer-navigation__info" href="#">О производстве</a>
-        <a class="footer-navigation__info" href="#">Наши документы</a>
-        <a class="footer-navigation__info" href="#">Экологические стандарты</a>
+      <section class="footer-navigation clearfix">
+        <div class="footer-navigation__block">
+          <a class="footer-navigation__block-info-dealer" href="#">Для поставщиков</a>
+          <a class="footer-navigation__block-info" href="#">О производстве</a>
+        </div>
+        <div class="footer-navigation__block">
+          <a class="footer-navigation__block-info" href="#">Наши документы</a>
+          <a class="footer-navigation__block-info" href="#">Экологические стандарты</a>
+        </div>
       </section>
       <section class="footer-copyright">
         <span>Сделано в <a class="copyright" href="https://htmlacademy.ru">HTML Academy</a> © 2016</span>
