--- a/index.html
+++ b/index.html
@@ -8,148 +8,165 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-    <div class="container clearfix">
-      <header class="main-header clearfix">
-        <nav class="main-navigation">
-          <a class="main-navigation__logo"><img src="img/logo.svg" alt="Логотип Glaccy" width="154" height="64"></a>
-          <ul class="main-navigation__list">
-            <li><a class="navigation" href="catalog.html">Каталог</a></li>
-            <li><a class="navigation" href="#">Доставка и оплата</a></li>
-            <li><a class="navigation" href="#">О Компании</a></li>
-          </ul>
-        </nav>
-        <div class="user-block">
-          <a class="search" href="#">search</a>
-          <a class="login" href="#">Вход</a>
-          <a class="cart" href="#">Пусто</a>
-        </div>
-        <div class="hours-phone">
-          <span>С 10 до 20, ежедневно</span>
-          <span class="phone">8 812 450-25-25</span>
-        </div>
-      </header>
+    <div class="index-wrapper clearfix">
+      <div class="content-wrapper">
+        <header class="main-header clearfix">
+          <a class="logo"><img src="img/logo.svg" alt="Логотип Glaccy" width="154" height="64"></a>
+          <nav class="main-navigation">
+            <ul class="main-navigation__list">
+              <li><a class="navigation" href="catalog.html">Каталог</a></li>
+              <li><a class="navigation" href="#">Доставка и оплата</a></li>
+              <li><a class="navigation" href="#">О Компании</a></li>
+            </ul>
+          </nav>
+          <div class="user-block">
+            <a class="search" href="#">search</a>
+            <a class="login" href="#">Вход</a>
+            <a class="cart" href="#">Пусто</a>
+          </div>
+          <div class="hours-phone">
+            <span class="hours">С 10 до 20, ежедневно</span>
+            <span class="phone">8 812 450-25-25</span>
+          </div>
+        </header>
+        <main class="content">
+          <div class="slider">
+            <div class="slide1">
+              <div class="slide-title">Крем-брюле и пломбир с малиновым джемом</div>
+              <a class="slide-btn" href="#">Давайте оба!</a>
+            </div>
+            <div class="slide2">
+              <div class="slide-title">Шоколадный пломбир и лимонный сорбет</div>
+              <a class="slide-btn" href="#">Давайте оба!</a>
+            </div>
+            <div class="slide3">
+              <div class="slide-title">Пломбир с помадкой и клубничный щербет</div>
+              <a class="slide-btn" href="#">Давайте оба!</a>
+            </div>
+            <div class="slider-controls">
+              <input class="btn89" type="radio" id="btn1" name="toggle" checked>
+              <label for="btn1"></label>
+              <input type="radio" id="slider-btn2" name="toggle">
+              <label for="slider-btn2" class=""></label>
+              <input type="radio" id="slider-btn3" name="toggle">
+              <label for="slider-btn3" class=""></label>
+            </div>
+          </div>
+          <section class="promo clearfix">
+            <article class="promo-raspberries clearfix">
+              <h2 class="promo__title">Малинка даром!</h2>
+              <p class="promo__description">При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
+              <a class="promo__btn" href="#">Хочу варенье!</a>
+            </article>
+            <article class="promo-chocolate clearfix">
+              <h2 class="promo__title">Шоколадки даром!</h2>
+              <p class="promo__description">При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
+              <a class="promo__btn" href="#">Хочу шоколадки!</a>
+            </article>
+          </section>
+          <section class="catalog clearfix">
+            <article class="item">
+              <img src="img/ice-orange.png" alt="Апельсиновое" width="267" height="267">
+              <span class="item-price">310 ₽/кг</span>
+              <a class="item-name" href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
+              <a class="btn-preview" href="#">Быстрый просмотр</a>
+            </article>
+            <article class="item">
+              <img src="img/ice-coffee.png" alt="Кофейное" width="267" height="267">
+              <span class="item-price">380 ₽/кг</span>
+              <a class="item-name" href="#">Сливочно-кофейное с кусочками шоколада</a>
+              <a class="btn-preview" href="#">Быстрый просмотр</a>
+            </article>
+            <article class="item">
+              <img src="img/ice-strawberry.png" alt="Клубничное" width="267" height="267">
+              <span class="item-price">355 ₽/кг</span>
+              <a class="item-name" href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
+              <a class="btn-preview" href="#">Быстрый просмотр</a>
+            </article>
+            <article class="item">
+              <img src="img/ice-caramel.png" alt="Крем-брюле" width="267" height="267">
+              <span class="item-price">415 ₽/кг</span>
+              <a class="item-name" href="#">Сливочное крем-брюле с карамельной подливкой</a>
+              <a class="btn-preview" href="#">Быстрый просмотр</a>
+            </article>
+          </section>
+          <article class="about clearfix">
+            <p class="about__title"><b>Магазин Глейси — это онлайн и офлайн магазин по продаже мороженого собственного производства на развес</b></p>
+            <div class="features">
+              <div class="features-content">
+                <p class="icon-ice">Все наше мороженое изготавливается на собственном производстве,
+                  с использованием современного оборудования и проверенных временем технологий.</p>
+              </div>
+              <div class="features-content">
+                <p class="icon-leaf">Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества.
+                  Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</p>
+              </div>
+            </div>
+            <div class="features">
+              <div class="features-content-right">
+                <p class="icon-cow">Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний,
+                  с которыми нас связывает долговременное сотрудничество.</p>
+              </div>
+              <div class="features-content-right">
+                <p class="icon-temperature">Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке,
+                  который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</p>
+              </div>
+            </div>
+          </article>
+          <div class="news clearfix">
+            <article class="blog">
+              <p class="blog__new">Новое в нашем блоге</p>
+              <p class="blog__title">10  способов сервировки фруктовых щербетов к столу</p>
+            </article>
+            <article class="subscribe">
+              <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит.
+                Обещаем не спамить и не слать всякой не нужной ерунды. Честно =) </p>
+                <form class="email" action="#" method="get">
+                  <fieldset class="email-input">
+                    <input type="text" name="email" value="" placeholder="Электронная почта">
+                  </fieldset>
+                  <button class="btn btn-send" type="submit">Отправить</button>
+                </form>
+            </article>
+          </div>
+          <article class="contacts">
+            <div class="map">
+              <img src="img/map.jpg" alt="Карта" width="1200" height="430">
+            </div>
+            <div class="contacts-text">
+              <p class="contacts-adress">
+                Адрес главного офиса и <br> офлайн магазина:
+                  <span class="contacts-text__main">ул. Большая Конюшенная 19/8, Санкт-Петербург</span>
+                Для заказов по телефону:
+                  <span class="contacts-text__phone">8 812 450-25-25</span>
+                (с 10 до 20 ежедневно)
+              </p>
+              <a class="btn" href="#">Форма обратной связи</a>
+            </div>
+          </article>
+        </main>
+        <footer class="footer clearfix">
+          <section class="footer-social">
+            <a class="social-btn social-btn-tw" href="#">Твиттер</a>
+            <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
+            <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
+            <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
+          </section>
+          <section class="footer-navigation clearfix">
+            <div class="footer-navigation__block-left">
+              <a class="footer-navigation__block-info-dealer" href="#">Для поставщиков</a>
+              <a class="footer-navigation__block-info" href="#">О производстве</a>
+            </div>
+            <div class="footer-navigation__block-right">
+              <a class="footer-navigation__block-info" href="#">Наши документы</a>
+              <a class="footer-navigation__block-info" href="#">Экологические стандарты</a>
+            </div>
+          </section>
+          <section class="footer-copyright">
+            <span>Сделано в <a class="copyright" href="https://htmlacademy.ru">HTML Academy</a> © 2016</span>
+          </section>
+        </footer>
+      </div>
     </div>
-    <main class="container">
-      <div class="gallery">
-        <figure class="gallery-content">
-          <img src="img/ice1.png" width="1045" height="881" alt="Крем-брюле и пломбир с малиновым джемом">
-        </figure>
-        <button class="btn-gallery" type="button"></button>
-        <button class="btn-gallery" type="button"></button>
-        <button class="btn-gallery" type="button"></button>
-        <button class="order-gallery" type="submit"></button>
-      </div>
-      <section class="promo clearfix">
-        <article class="promo-raspberries">
-          <h2 class="promo__title">Малинка даром!</h2>
-          <p class="promo__description">При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
-          <a class="promo__btn" href="#">Хочу варенье!</a>
-        </article>
-        <article class="promo-chocolate">
-          <h2 class="promo__title">Шоколадки даром!</h2>
-          <p class="promo__description">При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
-          <a class="promo__btn" href="#">Хочу шоколадки!</a>
-        </article>
-      </section>
-      <section class="catalog clearfix">
-        <article class="item">
-          <img src="img/ice-orange.png" alt="Апельсиновое" width="267" height="267">
-          <span class="item-price">310 ₽/кг</span>
-          <a class="item-name" href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
-          <a class="btn" href="#">Быстрый просмотр</a>
-        </article>
-        <article class="item">
-          <img src="img/ice-coffee.png" alt="Кофейное" width="267" height="267">
-          <span class="item-price">380 ₽/кг</span>
-          <a class="item-name" href="#">Сливочно-кофейное с кусочками шоколада</a>
-          <a class="btn" href="#">Быстрый просмотр</a>
-        </article>
-        <article class="item">
-          <img src="img/ice-strawberry.png" alt="Клубничное" width="267" height="267">
-          <span class="item-price">355 ₽/кг</span>
-          <a class="item-name" href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
-          <a class="btn" href="#">Быстрый просмотр</a>
-        </article>
-        <article class="item">
-          <img src="img/ice-caramel.png" alt="Крем-брюле" width="267" height="267">
-          <span class="item-price">415 ₽/кг</span>
-          <a class="item-name" href="#">Сливочное крем-брюле с карамельной подливкой</a>
-          <a class="btn" href="#">Быстрый просмотр</a>
-        </article>
-      </section>
-      <article class="about clearfix">
-        <p class="about__title"><b>Магазин Глейси — это онлайн и офлайн магазин по продаже мороженого собственного производства на развес</b></p>
-        <div class="features">
-          <div class="features-content">
-            <p>Все наше мороженое изготавливается на собственном производстве,
-              с использованием современного оборудования и проверенных временем технологий.</p>
-          </div>
-          <div class="features-content">
-            <p>Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества.
-              Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</p>
-          </div>
-        </div>
-        <div class="features">
-          <div class="features-content">
-            <p>Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний,
-              с которыми нас связывает долговременное сотрудничество.</p>
-          </div>
-          <div class="features-content">
-            <p>Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке,
-              который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</p>
-          </div>
-        </div>
-      </article>
-      <div class="news clearfix">
-        <article class="blog">
-          <p class="blog__new">Новое в нашем блоге</p>
-          <p class="blog__title">10  способов сервировки фруктовых щербетов к столу</p>
-        </article>
-        <article class="subscribe">
-          <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит.
-            Обещаем не спамить и не слать всякой не нужной ерунды. Честно =) </p>
-            <form action="#" method="get">
-              <input type="text" name="email" value="" placeholder="Электронная почта">
-              <button class="btn" type="submit">Отправить</button>
-            </form>
-        </article>
-      </div>
-      <article class="contacts">
-        <div class="map">
-          <img src="img/map.jpg" alt="Карта" width="1200" height="430">
-        </div>
-        <div class="contacts-text">
-          <p>
-            Адрес главного офиса и офлайн магазина:
-              <span class="contacts-text__main">ул. Большая Конюшенная 19/8, Санкт-Петербург</span>
-            Для заказов по телефону:
-              <span class="contacts-text__main">8 812 450-25-25</span>
-            (с 10 до 20 ежедневно)
-          </p>
-          <a class="btn" href="#">Форма обратной связи</a>
-        </div>
-      </article>
-    </main>
-    <footer class="footer container clearfix">
-      <section class="footer-social">
-        <a class="social-btn social-btn-tw" href="#">Твиттер</a>
-        <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
-        <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
-        <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
-      </section>
-      <section class="footer-navigation clearfix">
-        <div class="footer-navigation__block">
-          <a class="footer-navigation__block-info-dealer" href="#">Для поставщиков</a>
-          <a class="footer-navigation__block-info" href="#">О производстве</a>
-        </div>
-        <div class="footer-navigation__block">
-          <a class="footer-navigation__block-info" href="#">Наши документы</a>
-          <a class="footer-navigation__block-info" href="#">Экологические стандарты</a>
-        </div>
-      </section>
-      <section class="footer-copyright">
-        <span>Сделано в <a class="copyright" href="https://htmlacademy.ru">HTML Academy</a> © 2016</span>
-      </section>
-    </footer>
   </body>
 </html>
