--- a/catalog.html
+++ b/catalog.html
@@ -11,7 +11,7 @@
     <div class="site-wrapper clearfix">
       <div class="content-wrapper">
         <header class="main-header clearfix">
-          <a class="logo"><img src="img/logo.svg" alt="Логотип Glaccy" width="154" height="64"></a>
+          <a class="logo" href="index.html"><img src="img/logo.svg" alt="Логотип Glaccy" width="154" height="64"></a>
           <nav class="main-navigation">
             <ul class="main-navigation__list">
               <li><a class="navigation" href="catalog.html">Каталог</a></li>
